text alignment fixed

--- a/src/index.css
+++ b/src/index.css
@@ -146,6 +146,7 @@ h2 {
 
 .inicio .members .member:nth-child(2n) .member-description {
     flex-direction: row-reverse;
+    text-align: end;
 }
 
 .inicio .members .member {
